--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
 
   <section class="hero">
     <h1>Welcome to EmvResellers</h1>
-    <p>Modern software solutions for resellers and professionals.</p>
+    <p>The Safe & Anonomyous way To Obtain Emv Softwares</p>
   </section>
 
   <section class="products" id="products">
     <div class="product">
-      <h3>Software Tool 1</h3>
-      <p>Feature-rich, powerful software for your needs.</p>
+      <h3>X2 Allilone</h3>
+      <p>X2 Allinone is a software suite for reading, writing, and managing EMV chip card data, primarily used with compatible card readers and writers.</p>
       <button>Buy Now</button>
     </div>
     <div class="product">
@@ -105,7 +105,7 @@
   </section>
 
   <footer>
-    &copy; 2025 EmvResellers. All rights reserved.
+    &copy; 2025 EmvResellers All rights reserved.
   </footer>
 </body>
 </html>
