--- a/index.html
+++ b/index.html
@@ -174,23 +174,25 @@
 
                     {/* Header */}
                     <header className="bg-gray-800 shadow-lg py-4">
-                        <div className="container mx-auto px-4 flex justify-between items-center">
+                        {/* Container with responsive padding for better mobile fit */}
+                        <div className="container mx-auto px-4 sm:px-6 lg:px-8 flex flex-col sm:flex-row justify-between items-center">
                             {/* Logo and Title */}
-                            <div className="flex items-center space-x-2">
-                                <img src="https://i.imgur.com/uGwKStG.png" alt="EmvResellers Logo" class="h-16 w-auto rounded-full" />
-                                <h1 className="text-3xl font-bold text-yellow-400">EmvResellers</h1>
+                            <div className="flex items-center space-x-2 mb-4 sm:mb-0">
+                                <img src="https://i.imgur.com/uGwKStG.png" alt="EmvResellers Logo" className="h-14 sm:h-16 w-auto rounded-full" /> 
+                                <h1 className="text-2xl sm:text-3xl font-bold text-yellow-400">EmvResellers</h1> 
                             </div>
                             {/* Navigation and Cart Icon */}
-                            <nav className="flex items-center space-x-6">
-                                <ul className="flex space-x-6">
-                                    <li><a href="#home" className="text-gray-300 hover:text-yellow-400 transition duration-300">Home</a></li>
-                                    <li><a href="#products" className="text-gray-300 hover:text-yellow-400 transition duration-300">Products</a></li>
-                                    <li><a href="#contact" className="text-gray-300 hover:text-yellow-400 transition duration-300">Contact</a></li>
+                            {/* Adjusted nav to be column on small screens, row on medium+ */}
+                            <nav className="flex flex-col sm:flex-row items-center space-y-4 sm:space-y-0 sm:space-x-6">
+                                <ul className="flex space-x-4 sm:space-x-6"> 
+                                    <li><a href="#home" className="text-gray-300 hover:text-yellow-400 transition duration-300 text-sm sm:text-base">Home</a></li>
+                                    <li><a href="#products" className="text-gray-300 hover:text-yellow-400 transition duration-300 text-sm sm:text-base">Products</a></li>
+                                    <li><a href="#contact" className="text-gray-300 hover:text-yellow-400 transition duration-300 text-sm sm:text-base">Contact</a></li>
                                 </ul>
                                 {/* Cart Icon with Item Count */}
                                 <button
                                     onClick={() => setIsCartOpen(true)}
-                                    className="relative text-gray-300 hover:text-yellow-400 transition duration-300 p-2 rounded-full focus:outline-none focus:ring-2 focus:ring-yellow-500"
+                                    className="relative text-gray-300 hover:text-yellow-400 transition duration-300 p-2 rounded-full focus:outline-none focus:ring-2 focus:ring-yellow-500 mt-2 sm:mt-0"
                                     aria-label="View shopping cart"
                                 >
                                     {/* Shopping cart icon (using inline SVG for simplicity) */}
@@ -208,38 +210,38 @@
                     </header>
 
                     {/* Hero Section */}
-                    <section id="home" className="relative bg-gray-900 py-20 flex items-center justify-center text-center overflow-hidden">
+                    <section id="home" className="relative bg-gray-900 py-16 md:py-20 flex items-center justify-center text-center overflow-hidden px-4">
                         <div className="absolute inset-0 bg-gradient-to-br from-gray-950 to-gray-800 opacity-70"></div>
-                        <div className="relative z-10 container mx-auto px-4">
-                            <h2 className="text-5xl md:text-6xl font-extrabold text-yellow-400 leading-tight mb-4 animate-fade-in-up">
+                        <div className="relative z-10 container mx-auto">
+                            <h2 className="text-4xl md:text-5xl lg:text-6xl font-extrabold text-yellow-400 leading-tight mb-4 animate-fade-in-up">
                                 Unlock Potential with Our Cutting-Edge Emv Software
                             </h2>
-                            <p className="text-xl md:text-2xl text-gray-300 mb-8 max-w-3xl mx-auto animate-fade-in-up delay-200">
+                            <p className="text-lg md:text-xl text-gray-300 mb-8 max-w-3xl mx-auto animate-fade-in-up delay-200">
                                 The Safe & Anonymous Way to Obtain Emv Softwares
                             </p>
-                            <a href="#products" className="inline-block bg-yellow-500 text-gray-900 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-yellow-600 transition duration-300 transform hover:scale-105 animate-fade-in-up delay-400">
+                            <a href="#products" className="inline-block bg-yellow-500 text-gray-900 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-yellow-600 transition duration-300 transform hover:scale-105 animate-fade-in-up delay-400 text-base sm:text-lg">
                                 Explore Software
                             </a>
                         </div>
                     </section>
 
                     {/* Products Section */}
-                    <section id="products" className="py-16 md:py-24 bg-gray-900 flex-grow">
-                        <div className="container mx-auto px-4">
-                            <h2 className="text-4xl font-bold text-center text-yellow-400 mb-12">Our Emv Softwares</h2>
+                    <section id="products" className="py-16 md:py-24 bg-gray-900 flex-grow px-4">
+                        <div className="container mx-auto">
+                            <h2 className="text-3xl sm:text-4xl font-bold text-center text-yellow-400 mb-10 md:mb-12">Our Emv Softwares</h2>
 
-                            <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                            <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-8"> 
                                 {softwareProducts.map(product => (
-                                    <div key={product.id} className="bg-gray-800 p-8 rounded-xl shadow-lg border border-gray-700 hover:shadow-2xl transition duration-300 transform hover:-translate-y-1">
-                                        <h3 className="text-3xl font-semibold text-yellow-300 mb-4">{product.name}</h3>
-                                        <p className="text-gray-300 leading-relaxed mb-4">{product.description}</p>
+                                    <div key={product.id} className="bg-gray-800 p-6 md:p-8 rounded-xl shadow-lg border border-gray-700 hover:shadow-2xl transition duration-300 transform hover:-translate-y-1"> 
+                                        <h3 className="text-2xl md:text-3xl font-semibold text-yellow-300 mb-3 md:mb-4">{product.name}</h3> 
+                                        <p className="text-gray-300 leading-relaxed mb-4 text-sm md:text-base">{product.description}</p> 
                                         <div className="flex items-center justify-between mb-6">
-                                            <span className="text-2xl font-bold text-yellow-400">
+                                            <span className="text-xl md:text-2xl font-bold text-yellow-400"> 
                                                 {product.price === 0.00 ? 'Free' : `$${product.price.toFixed(2)}`}
                                             </span>
                                             <button
                                                 onClick={() => addToCart(product)}
-                                                className="bg-yellow-500 text-gray-900 font-bold py-2 px-4 rounded-lg hover:bg-yellow-600 transition duration-300"
+                                                className="bg-yellow-500 text-gray-900 font-bold py-2 px-4 rounded-lg hover:bg-yellow-600 transition duration-300 text-sm md:text-base" 
                                             >
                                                 Add to Cart
                                             </button>
@@ -251,61 +253,61 @@
                     </section>
 
                     {/* Contact Section */}
-                    <section id="contact" className="bg-gray-800 py-16 md:py-20 text-center">
-                        <div className="container mx-auto px-4">
-                            <h2 className="text-4xl font-bold text-yellow-400 mb-8">Get in Touch</h2>
-                            <p className="text-gray-300 text-lg mb-8 max-w-2xl mx-auto">
+                    <section id="contact" className="bg-gray-800 py-16 md:py-20 text-center px-4">
+                        <div className="container mx-auto">
+                            <h2 className="text-3xl sm:text-4xl font-bold text-yellow-400 mb-6 md:mb-8">Get in Touch</h2> 
+                            <p className="text-gray-300 text-base md:text-lg mb-6 md:mb-8 max-w-2xl mx-auto"> 
                                 Have questions about our software or need assistance? Contact us today!
                             </p>
-                            <a href="https://t.me/EmvResellers" target="_blank" rel="noopener noreferrer" className="inline-block bg-yellow-500 text-gray-900 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-yellow-600 transition duration-300 transform hover:scale-105">
+                            <a href="https://t.me/EmvResellers" target="_blank" rel="noopener noreferrer" className="inline-block bg-yellow-500 text-gray-900 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-yellow-600 transition duration-300 transform hover:scale-105 text-base sm:text-lg">
                                 Contact us Via Telegram
                             </a>
                         </div>
                     </section>
 
                     {/* Footer */}
-                    <footer className="bg-gray-950 py-8 text-center text-gray-400">
-                        <div className="container mx-auto px-4">
-                            <p>&copy; 2025 EmvResellers. All rights reserved.</p>
+                    <footer className="bg-gray-950 py-6 text-center text-gray-400 px-4"> 
+                        <div className="container mx-auto">
+                            <p className="text-sm sm:text-base">&copy; 2025 EmvResellers. All rights reserved.</p> 
                         </div>
                     </footer>
 
                     {/* Cart Modal */}
                     {isCartOpen && (
                         <div className="fixed inset-0 bg-gray-900 bg-opacity-75 flex justify-center items-center z-50 p-4">
-                            <div className="bg-gray-800 rounded-lg shadow-xl w-full max-w-lg p-6 relative">
-                                <h2 className="text-3xl font-bold text-yellow-400 mb-6">Your Cart</h2>
+                            <div className="bg-gray-800 rounded-lg shadow-xl w-full max-w-sm md:max-w-lg p-5 md:p-6 relative"> 
+                                <h2 className="text-2xl md:text-3xl font-bold text-yellow-400 mb-5 md:mb-6">Your Cart</h2> 
                                 <button
                                     onClick={() => setIsCartOpen(false)}
-                                    className="absolute top-4 right-4 text-gray-400 hover:text-gray-200 transition duration-300"
+                                    className="absolute top-3 right-3 md:top-4 md:right-4 text-gray-400 hover:text-gray-200 transition duration-300" 
                                     aria-label="Close cart"
                                 >
                                     {/* Close icon */}
-                                    <svg xmlns="http://www.w3.org/2000/svg" className="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth="2">
+                                    <svg xmlns="http://www.w3.org/2000/svg" className="h-7 w-7 md:h-8 md:w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth="2">
                                         <path strokeLinecap="round" strokeLinejoin="round" d="M6 18L18 6M6 6l12 12" />
                                     </svg>
                                 </button>
 
                                 {cart.length === 0 ? (
-                                    <p className="text-gray-400 text-lg">Your cart is empty.</p>
+                                    <p className="text-gray-400 text-base md:text-lg">Your cart is empty.</p>
                                 ) : (
                                     <>
-                                        <ul className="space-y-4 max-h-80 overflow-y-auto mb-6">
+                                        <ul className="space-y-3 md:space-y-4 max-h-72 md:max-h-80 overflow-y-auto mb-5 md:mb-6"> 
                                             {cart.map(item => (
-                                                <li key={item.id} className="flex justify-between items-center bg-gray-700 p-3 rounded-lg">
+                                                <li key={item.id} className="flex justify-between items-center bg-gray-700 p-3 rounded-lg text-sm md:text-base"> 
                                                     <div>
-                                                        <p className="text-lg font-semibold text-gray-100">{item.name} <span className="text-yellow-300">x{item.quantity}</span></p>
-                                                        <p className="text-gray-300 text-sm">
+                                                        <p className="font-semibold text-gray-100">{item.name} <span className="text-yellow-300">x{item.quantity}</span></p>
+                                                        <p className="text-gray-300 text-xs md:text-sm">
                                                             {item.price === 0.00 ? 'Free' : `$${(item.price * item.quantity).toFixed(2)}`}
                                                         </p>
                                                     </div>
                                                     <button
                                                         onClick={() => removeFromCart(item.id)}
-                                                        className="text-red-500 hover:text-red-400 transition duration-300 p-2 rounded-full"
+                                                        className="text-red-500 hover:text-red-400 transition duration-300 p-1 md:p-2 rounded-full" 
                                                         aria-label={`Remove ${item.name} from cart`}
                                                     >
                                                         {/* Remove icon */}
-                                                        <svg xmlns="http://www.w3.org/2000/svg" className="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth="2">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" className="h-5 w-5 md:h-6 md:w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth="2">
                                                             <path strokeLinecap="round" strokeLinejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 0 00-1-1h-4a1 0 00-1 1v3M4 7h16" />
                                                         </svg>
                                                     </button>
@@ -313,11 +315,11 @@
                                             ))}
                                         </ul>
                                         <div className="border-t border-gray-700 pt-4 flex justify-between items-center">
-                                            <span className="text-2xl font-bold text-yellow-400">Total:</span>
-                                            <span className="text-2xl font-bold text-yellow-400">${totalPrice}</span>
+                                            <span className="text-xl md:text-2xl font-bold text-yellow-400">Total:</span> 
+                                            <span className="text-xl md:text-2xl font-bold text-yellow-400">${totalPrice}</span> 
                                         </div>
                                         <button
-                                            className="w-full bg-yellow-500 text-gray-900 font-bold py-3 rounded-lg mt-6 hover:bg-yellow-600 transition duration-300 transform hover:scale-105"
+                                            className="w-full bg-yellow-500 text-gray-900 font-bold py-2 md:py-3 rounded-lg mt-5 md:mt-6 hover:bg-yellow-600 transition duration-300 transform hover:scale-105 text-base md:text-lg" 
                                             onClick={() => alert("Proceeding to checkout! (This is a placeholder action)")}
                                         >
                                             Proceed to Checkout
