--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 {
                     id: 'msrx',
                     name: 'Msrx',
-                    description: 'MSRX is software used to read, write, and erase magnetic stripe card data with compatible card readers. Its legal purpose is for managing cards like hotel keys, employee IDs, and gift or access cards in business or organizational settings.',
+                    description: 'MSRX is software used to read, write, and erase magnetic stripe card data with compatible card readers. Its purpose is for managing cards like hotel keys, employee IDs, and debit/credit cards.',
                     price: 0.00
                 },
                 {
@@ -115,7 +115,7 @@
                 },
                 {
                     id: 'arqcgen',
-                    name: 'Arqc gen',
+                    name: 'ARQC Gen',
                     description: 'ARQC Gen is software used to generate ARQC (Authorization Request Cryptogram) values for EMV chip cards. It’s typically used for testing and simulating EMV transaction behavior in payment system development and security research.',
                     price: 6.99
                 },
@@ -127,7 +127,7 @@
                 },
                 {
                     id: 'istfiles',
-                    name: 'IST files',
+                    name: 'IST files (2000+ U.S/UK)',
                     description: 'IST files are data files used to store EMV card information, such as track data, chip data, and cryptographic values. They are used in EMV software to load, manage, and simulate card profiles during card testing or development.',
                     price: 4.99
                 },
