--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
             max-height: 70vh; /* Make image responsive within modal */
             object-fit: contain; /* Ensure image fits without cropping */
         }
+
+        /* Custom scrollbar for modal content */
+        .custom-scrollbar::-webkit-scrollbar {
+            width: 8px;
+        }
+        .custom-scrollbar::-webkit-scrollbar-track {
+            background: #4a5568; /* Tailwind gray-700 */
+            border-radius: 10px;
+        }
+        .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: #ecc94b; /* Tailwind yellow-400 */
+            border-radius: 10px;
+        }
+        .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+            background: #d69e2e; /* Darker yellow on hover */
+        }
     </style>
 </head>
 <body class="bg-gray-900">
@@ -81,6 +97,9 @@
             const [isImageViewerOpen, setIsImageViewerOpen] = React.useState(false);
             const [currentImageViewProduct, setCurrentImageViewProduct] = React.useState(null);
             const [currentImageIndex, setCurrentImageIndex] = React.useState(0);
+            // State for legal/privacy modal
+            const [isLegalModalOpen, setIsLegalModalOpen] = React.useState(false);
+            const [currentLegalTab, setCurrentLegalTab] = React.useState('terms'); // 'terms' or 'privacy'
 
 
             // Load cart from localStorage on initial render
@@ -263,6 +282,101 @@
                 }
             ];
 
+            const termsOfServiceContent = `
+                ## EmvResellers Terms of Service
+
+                **Last Updated:** June 11, 2025
+
+                Welcome to EmvResellers. By accessing or using our website and purchasing our software products, you agree to comply with and be bound by the following Terms of Service. Please review these terms carefully.
+
+                **1. Acceptance of Terms**
+                By using this website, you acknowledge that you have read, understood, and agree to be bound by these Terms of Service. If you do not agree with any part of these terms, you must not use our website or purchase our products.
+
+                **2. Nature of Software Products**
+                EmvResellers provides software products primarily for testing, development, and research purposes related to EMV technology. Users are solely responsible for ensuring that their use of our software complies with all applicable local, national, and international laws and regulations. We do not condone or support the use of our software for any illegal or fraudulent activities.
+
+                **3. Software Legitimacy and Safety**
+                We rigorously test our software with VirusTotal and numerous other reputable security tools. These comprehensive scans consistently show no viruses or malware, ensuring the integrity and safety of our downloads. However, users are ultimately responsible for their own security practices, including running up-to-date antivirus software.
+
+                **4. Cryptocurrency Payments**
+                All transactions on EmvResellers are conducted exclusively via cryptocurrency payments. This method is chosen to enhance the security and anonymity of our customers. Specific payment instructions will be provided at checkout. Due to the volatile nature of cryptocurrencies, prices may fluctuate.
+
+                **5. Product Delivery**
+                Upon successful and confirmed cryptocurrency payment, secure download links for purchased software will be provided. Details will be communicated through the checkout process and other specified secure channels.
+
+                **6. Limitation of Liability**
+                EmvResellers shall not be liable for any direct, indirect, incidental, special, consequential, or exemplary damages, including but not limited to, damages for loss of profits, goodwill, data, or other intangible losses resulting from the use or inability to use our website or products.
+
+                **7. No Warranties**
+                Our software products are provided "as is" without any warranties, express or implied, including but not limited to the implied warranties of merchantability, fitness for a particular purpose, or non-infringement. We do not warrant that the software will be error-free or that access to the website will be uninterrupted.
+
+                **8. User Responsibilities**
+
+                * Users must ensure they have the necessary technical knowledge to use our software.
+
+                * Users are responsible for maintaining the confidentiality of any download links or other access credentials.
+
+                * Users must comply with all applicable laws and regulations in their use of our software.
+
+                **9. Changes to Terms**
+                We reserve the right to modify these Terms of Service at any time. Any changes will be effective immediately upon posting on the website. Your continued use of the website after such modifications will constitute your acknowledgment of the modified terms and agreement to abide and be bound by them.
+
+                **10. Governing Law**
+                These Terms of Service shall be governed by and construed in accordance with the laws applicable to our jurisdiction, without regard to its conflict of law principles.
+
+                **11. Contact**
+                For any questions regarding these Terms of Service, please contact us via our Telegram channel as indicated on our website.
+            `;
+
+            const privacyPolicyContent = `
+                ## EmvResellers Privacy Policy
+
+                **Last Updated:** June 11, 2025
+
+                Your privacy and anonymity are paramount to EmvResellers. This Privacy Policy outlines our commitment to minimal data collection and safeguarding your information when you use our website and purchase our software.
+
+                **1. Our Commitment to Anonymity**
+                We prioritize the privacy of our users above all else. Our operational model is designed to minimize the collection of personal identifying information (PII). We do not require or collect your name, email address, physical address, phone number, or any other data that could directly identify you.
+
+                **2. Information We Collect (Minimal Data)**
+
+                * **Transaction Information:** When you make a purchase, we collect only the necessary information pertaining to the cryptocurrency transaction (e.g., transaction ID, cryptocurrency type, amount). This data is essential for verifying payments and facilitating product delivery. This information is not linked to any personal identity.
+
+                * **Website Usage Data (Anonymized):** We may collect basic, non-identifying data about website traffic and usage patterns (e.g., pages visited, time spent on site, browser type). This data is collected in an **anonymized** and aggregated form (e.g., via generic server logs) and cannot be used to identify individual users. We do not use tracking cookies or analytics tools that collect personal data.
+
+                **3. How We Use Information (Purpose-Limited)**
+                The limited information we collect is used solely for the following purposes:
+
+                * To process and verify your cryptocurrency payments.
+
+                * To deliver your purchased software securely.
+
+                * To improve our website's functionality and user experience through anonymized traffic analysis.
+
+                * To respond to direct support inquiries via our Telegram channel, where you control the information you share.
+
+                **4. Data Sharing and Disclosure (None)**
+                EmvResellers **does not share, sell, rent, or disclose any information (including anonymized data) with third parties** for marketing, advertising, or any other purpose. Our commitment to your anonymity means your usage data and transaction details remain with us, strictly for the purposes outlined above.
+
+                **5. Data Retention**
+                Transaction information is retained only for the duration necessary to verify payment and ensure successful product delivery. Anonymized usage data is aggregated and not retained in a form that could ever be linked to an individual. We strive to retain data for the shortest possible period consistent with operational necessity.
+
+                **6. Security Measures**
+                We implement industry-standard security measures to protect the integrity of our website and the minimal data we do handle. However, no method of transmission over the Internet or electronic storage is 100% secure.
+
+                **7. External Links**
+                Our website may contain links to external sites (e.g., Telegram). Please be aware that we are not responsible for the privacy practices of these other sites. We encourage you to read the privacy statements of any other site that collects personally identifiable information.
+
+                **8. Children's Privacy**
+                Our website is not directed at children under the age of 18, and we do not knowingly collect any information from children.
+
+                **9. Changes to this Privacy Policy**
+                We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated "Last Updated" date. We encourage you to review this policy periodically.
+
+                **10. Contact**
+                For any questions regarding this Privacy Policy or your data, please contact us via our Telegram channel as indicated on our website.
+            `;
+
             return (
                 <div className="bg-gray-900 text-gray-200 min-h-screen flex flex-col">
                     {/* Notification Bar */}
@@ -292,6 +406,15 @@
                                     <li><a href="#payments" className="text-gray-300 hover:text-yellow-400 transition duration-300 text-sm sm:text-base">Payments</a></li>
                                     <li><a href="#faq" className="text-gray-300 hover:text-yellow-400 transition duration-300 text-sm sm:text-base">FAQ</a></li>
                                     <li><a href="#contact" className="text-gray-300 hover:text-yellow-400 transition duration-300 text-sm sm:text-base">Contact</a></li>
+                                    {/* New button for Legal & Privacy Modal */}
+                                    <li>
+                                        <button
+                                            onClick={() => setIsLegalModalOpen(true)}
+                                            className="text-gray-300 hover:text-yellow-400 transition duration-300 text-sm sm:text-base focus:outline-none"
+                                        >
+                                            Legal & Privacy
+                                        </button>
+                                    </li>
                                 </ul>
                                 {/* Cart Icon with Item Count */}
                                 <button
@@ -318,7 +441,7 @@
                         <div className="absolute inset-0 bg-gradient-to-br from-gray-950 to-gray-800 opacity-70"></div>
                         <div className="relative z-10 container mx-auto">
                             <h2 className="text-4xl md:text-5xl lg:text-6xl font-extrabold text-yellow-400 leading-tight mb-4 animate-fade-in-up">
-                                Unlock Your Potential with Our Cutting-Edge Emv Software {/* Changed "Unlock Potential" to "Unlock Your Potential" */}
+                                Unlock Your Potential with Our Cutting-Edge Emv Software
                             </h2>
                             <p className="text-lg md:text-xl text-gray-300 mb-8 max-w-3xl mx-auto animate-fade-in-up delay-200">
                                 The Safe & Anonymous Way to Obtain Emv Softwares
@@ -344,7 +467,7 @@
                                                 {product.price === 0.00 ? 'Free' : `$${product.price.toFixed(2)}`}
                                             </span>
                                             {/* Add to Cart and View Buttons - Adjusted for consistent size */}
-                                            <div className="flex flex-1 space-x-3 ml-4"> {/* Use flex-1 here to make buttons share space */}
+                                            <div className="flex flex-1 space-x-3 ml-4"> 
                                                 <button
                                                     onClick={() => addToCart(product)}
                                                     className="flex-1 bg-yellow-500 text-gray-900 font-bold py-2 px-4 rounded-lg hover:bg-yellow-600 transition duration-300 text-sm md:text-base flex items-center justify-center whitespace-nowrap" 
@@ -414,8 +537,15 @@
 
                     {/* Footer */}
                     <footer className="bg-gray-950 py-6 text-center text-gray-400 px-4"> 
-                        <div className="container mx-auto">
+                        <div className="container mx-auto flex flex-col sm:flex-row justify-center items-center space-y-2 sm:space-y-0 sm:space-x-4">
                             <p className="text-sm sm:text-base">&copy; 2025 EmvResellers. All rights reserved.</p> 
+                            {/* Legal & Privacy button in footer, links to modal */}
+                            <button
+                                onClick={() => setIsLegalModalOpen(true)}
+                                className="text-gray-400 hover:text-yellow-400 transition-colors duration-300 text-sm focus:outline-none"
+                            >
+                                Legal & Privacy
+                            </button>
                         </div>
                     </footer>
 
@@ -530,6 +660,54 @@
                                                 <path strokeLinecap="round" strokeLinejoin="round" d="M9 5l7 7-7 7" />
                                             </svg>
                                         </button>
+                                    )}
+                                </div>
+                            </div>
+                        </div>
+                    )}
+
+                    {/* Legal & Privacy Modal */}
+                    {isLegalModalOpen && (
+                        <div className="fixed inset-0 bg-gray-900 bg-opacity-75 flex justify-center items-center z-50 p-4">
+                            <div className="bg-gray-800 rounded-lg shadow-xl w-full max-w-2xl lg:max-w-4xl h-5/6 flex flex-col relative p-6">
+                                {/* Close Button */}
+                                <button
+                                    onClick={() => setIsLegalModalOpen(false)}
+                                    className="absolute top-3 right-3 text-gray-400 hover:text-gray-200 transition duration-300 p-2 rounded-full bg-gray-700 hover:bg-gray-600"
+                                    aria-label="Close legal and privacy modal"
+                                >
+                                    <svg xmlns="http://www.w3.org/2000/svg" className="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth="2">
+                                        <path strokeLinecap="round" strokeLinejoin="round" d="M6 18L18 6M6 6l12 12" />
+                                    </svg>
+                                </button>
+
+                                {/* Tab Navigation */}
+                                <div className="flex border-b border-gray-700 mb-4">
+                                    <button
+                                        onClick={() => setCurrentLegalTab('terms')}
+                                        className={`py-2 px-4 text-lg font-semibold rounded-t-lg transition-colors duration-200 ${currentLegalTab === 'terms' ? 'bg-gray-700 text-yellow-400' : 'text-gray-400 hover:text-yellow-300'}`}
+                                    >
+                                        Terms of Service
+                                    </button>
+                                    <button
+                                        onClick={() => setCurrentLegalTab('privacy')}
+                                        className={`py-2 px-4 text-lg font-semibold rounded-t-lg transition-colors duration-200 ${currentLegalTab === 'privacy' ? 'bg-gray-700 text-yellow-400' : 'text-gray-400 hover:text-yellow-300'}`}
+                                    >
+                                        Privacy Policy
+                                    </button>
+                                </div>
+
+                                {/* Content Area */}
+                                <div className="flex-grow overflow-y-auto custom-scrollbar p-2">
+                                    {currentLegalTab === 'terms' && (
+                                        <div className="text-gray-300 text-sm md:text-base leading-relaxed"
+                                            dangerouslySetInnerHTML={{ __html: termsOfServiceContent.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>').replace(/\n/g, '<br/>') }}>
+                                        </div>
+                                    )}
+                                    {currentLegalTab === 'privacy' && (
+                                        <div className="text-gray-300 text-sm md:text-base leading-relaxed"
+                                            dangerouslySetInnerHTML={{ __html: privacyPolicyContent.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>').replace(/\n/g, '<br/>') }}>
+                                        </div>
                                     )}
                                 </div>
                             </div>
