--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     answer: "Our software products are intended for legal purposes only, such as testing, development, and research in secure environments. Users are responsible for ensuring their use complies with all applicable laws and regulations."
                 },
                 {
-                    question: "What payment methods do we accept?", // NEW FAQ entry
+                    question: "What payment methods do we accept?",
                     answer: "For your security and anonymity, we exclusively accept cryptocurrency payments. This ensures fast, secure, and private transactions for all our customers. We support various cryptocurrencies. Specific payment instructions will be provided during checkout. Please note that prices are subject to change based on cryptocurrency market fluctuations."
                 }
             ];
@@ -334,7 +334,7 @@
                 These Terms of Service shall be governed by and construed in accordance with the laws applicable to our jurisdiction, without regard to its conflict of law principles.
 
                 **11. Contact**
-                For any questions regarding these Terms of Service, please contact us via Telegram  as indicated on our website.
+                For any questions regarding these Terms of Service, please contact us via Telegram as indicated on our website.
             `;
 
             const privacyPolicyContent = `
@@ -469,7 +469,8 @@
                                 {softwareProducts.map(product => (
                                     <div key={product.id} className="bg-gray-800 p-6 md:p-8 rounded-xl shadow-lg border border-gray-700 hover:shadow-2xl transition duration-300 transform hover:-translate-y-1"> 
                                         <h3 className="text-2xl md:text-3xl font-semibold text-yellow-300 mb-3 md:mb-4">{product.name}</h3> 
-                                        <p className="text-gray-300 leading-relaxed mb-4 text-sm md:text-base">{product.description}</p> 
+                                        {/* Added a consistent height to the description for better alignment */}
+                                        <p className="text-gray-300 leading-relaxed mb-4 text-sm md:text-base min-h-[60px] flex items-center">{product.description}</p> 
                                         <div className="flex items-center justify-between mb-6">
                                             <span className="text-xl md:text-2xl font-bold text-yellow-400 mr-4 whitespace-nowrap"> 
                                                 {product.price === 0.00 ? 'Free' : `$${product.price.toFixed(2)}`}
